<?xml version="1.0" encoding="utf-8"?>
<!-- 题目列表 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical" >

	<RelativeLayout
		android:id="@+id/ProblemChoose_rl_unfinished"
		style="@style/titleBar_background_style" >

		<TextView
			android:id="@+id/ProblemChooseTitleBar_tv_timeRemain"
			style="@style/titleBar_text_style"
			android:layout_centerInParent="true"
			android:drawableLeft="@drawable/titlebar_timer"
			android:drawablePadding="10dip"
			android:gravity="center" />

		<Button
			android:id="@+id/ProblemChoose_btn_handIn"
			style="@style/titleBar_btn_style"
			android:layout_alignParentRight="true"
			android:text="@string/ProblemChoose_handIn" />
	</RelativeLayout>

	<RelativeLayout
		android:id="@+id/ProblemChoose_rl_finished"
		style="@style/titleBar_background_style"
		android:visibility="visible" >

		<Button
			android:id="@+id/ProblemChoose_btn_back"
			style="@style/titleBar_btn_back_style"
			android:layout_alignParentLeft="true"
			android:text="@string/ProblemChoose_back" />

		<TextView
			android:id="@+id/TitleBar_tv_score"
			style="@style/titleBar_text_style"
			android:layout_centerInParent="true"
			android:drawableLeft="@drawable/titlebar_score"
			android:drawablePadding="10dip"
			android:gravity="center" />

		<Button
			android:id="@+id/ProblemChoose_btn_getScore"
			style="@style/titleBar_btn_style"
			android:layout_alignParentRight="true"
			android:text="@string/ProblemChoose_getScore" />
	</RelativeLayout>

	<TextView
		android:id="@+id/ProblemChoose_tv_examName"
		style="@style/textview_style_title"
		android:layout_gravity="center" />

	<TextView
		android:id="@+id/ProblemChoose_tv_saveHint"
		style="@style/textview_style_titleHint"
		android:layout_gravity="center"
		android:text="@string/ProblemChoose_saveHint" />

	<GridView
		android:id="@+id/ProblemChoose_gv_problemList"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:columnWidth="90dp"
		android:gravity="center"
		android:horizontalSpacing="10dp"
		android:numColumns="auto_fit"
		android:stretchMode="columnWidth"
		android:verticalSpacing="10dp" />

</LinearLayout>